[package]
name = "bolt-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9.3"
futures = "0.3"
async-trait = "0.1.82"
eyre = "0.6.12"
thiserror = "1.0.63"
reqwest = "0.12.7"

ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "1df4cd9b", features = [
    "sha2-asm",
] } # crypto

# tracing & metrics
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prometheus = "0.13.4"

# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"

# alloy
alloy = { version = "0.2.0", features = [
    "full",
    "provider-trace-api",
    "rpc-types-beacon",
    "rpc-types-engine",
] }

# commit-boost
commit-boost = { git = "https://github.com/commit-boost/commit-boost-client", rev = "45ce8f1b" }
cb-common = { git = "https://github.com/commit-boost/commit-boost-client", rev = "45ce8f1b" }

# other
types = { git = "https://github.com/sigp/lighthouse", rev = "2e0eb6d1" }
rand = "0.8.5"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
