[package]
name = "bolt-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9.3"
futures = "0.3"
async-trait = "0.1.82"
eyre = "0.6.12"
thiserror = "1.0.63"
reqwest = "0.12.7"

# crypto
ssz_rs = { git = "https://github.com/mempirate/ssz-rs", branch = "feat/bump-deps", features = [
    "sha2-asm",
] }
tree_hash = "0.8"

# tracing & metrics
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prometheus = "0.13.4"

# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ethereum_ssz = "0.7.0"
ethereum_ssz_derive = "0.7.0"

alloy = { version = "0.3.6", features = [
    "signer-local",
    "provider-trace-api",
    "rpc-types-beacon",
    "rpc-types-engine",
] } # alloy

# commit-boost
cb-common = { git = "https://github.com/commit-boost/commit-boost-client", rev = "v0.3.0" }
cb-pbs = { git = "https://github.com/commit-boost/commit-boost-client", rev = "v0.3.0" }

# other
rand = "0.8.5"
parking_lot = "0.12.3"
lazy_static = "1.5.0"

[dev-dependencies]
# NOTE: we need this in order to play nice with Lighthouse types at version 5.3.0
ssz_compat = { version = "0.5", package = "ethereum_ssz" }
types = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }
