[package]
name = "bolt-sidecar"
version = "0.1.0"
edition = "2021"
default-run = "bolt-sidecar"

[dependencies]
# core
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
warp = "0.3.7"
futures = "0.3"

# crypto
blst = "0.3.12"
secp256k1 = { version = "0.29.0", features = ["rand"] }

# alloy
alloy-rpc-client = { version = "0.1.2", features = ["reqwest", "ws", "pubsub"] }
alloy-consensus = { version = "0.1.2", features = ["k256"] }
alloy-provider = { version = "0.1.2", features = ["ws"] }
alloy-signer = { version = "0.1.2" }
alloy-signer-local = { version = "0.1.2" }
alloy-transport = { version = "0.1.2" }
alloy-eips = { version = "0.1.2" }
alloy-transport-http = { version = "0.1.2" }
alloy-transport-ws = { version = "0.1.2" }
alloy-pubsub = { version = "0.1.2" }
alloy-rpc-types = { version = "0.1.2" }
alloy-rpc-types-trace = { version = "0.1.2" }
alloy-json-rpc = { version = "0.1.2" }
alloy-network = { version = "0.1.2" }
alloy-primitives = { version = "0.7.1" }
alloy-rlp = { version = "0.3" }


# alloy-rpc-types = { git = "https://github.com/chainbound/alloy", branch = "fix/account-override-serialize" }


# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "71c404d" }
# reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "71c404d" }

reqwest = "0.12"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

# types
partial-mpt = { git = "https://github.com/chainbound/partial-mpt", branch = "feat/alloy" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
parking_lot = "0.12.1"
async-trait = "0.1.79"
bytes = "1.6.0"
lru = "0.12.3"
hex = "0.4.3"

# utils
eyre = "0.6.12"
thiserror = "1.0"
rand = "0.8.5"
dotenvy = "0.15.7"

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# commit-boost
cb-crypto = { git = "https://github.com/Commit-Boost/commit-boost-client" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client" }

[dev-dependencies]
alloy-node-bindings = "0.1.1"


[[bin]]
name = "bolt-sidecar"
path = "bin/sidecar.rs"
