[package]
name = "bolt-sidecar"
version = "0.2.1-alpha"
edition = "2021"
default-run = "bolt-sidecar"

[dependencies]
# core
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9.3"
warp = "0.3.7"
futures = "0.3"

# crypto
blst = "0.3.12"
tree_hash = "0.5"
tree_hash_derive = "0.5"
secp256k1 = { version = "0.29.0", features = ["rand"] }

# alloy
alloy = { version = "0.2.0", features = [
    "full",
    "provider-trace-api",
    "rpc-types-beacon",
    "rpc-types-engine",
] }

# alloy-rpc-types = { git = "https://github.com/chainbound/alloy", branch = "fix/account-override-serialize" }


# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.2" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", version = "1.0.2" }
# reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "71c404d" }

reqwest = "0.12"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

# types
partial-mpt = { git = "https://github.com/chainbound/partial-mpt", branch = "feat/alloy" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
parking_lot = "0.12.1"
async-trait = "0.1.79"
bytes = "1.6.0"
lru = "0.12.3"
hex = "0.4.3"

# utils
eyre = "0.6.12"
thiserror = "1.0"
rand = "0.8.5"
dotenvy = "0.15.7"
regex = "1.10.5"

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# commit-boost
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "0c12f37" }

[dev-dependencies]
alloy-node-bindings = "0.2.0"


[[bin]]
name = "bolt-sidecar"
path = "bin/sidecar.rs"
