[package]
name = "bolt-spammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
eyre = "0.6.12"
ethers = "2.0.14"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = "0.12.3"
